# text-to-sql-poc

./: .gitignore  README.md  demo_chat.py  pyproject.toml  run_demo.sh  test_query.py  test_regex.py
boons_text_to_sql_agent/: config.py  main.py
boons_text_to_sql_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
boons_text_to_sql_agent/application/: __init__.py  services.py
boons_text_to_sql_agent/application/ports/: __init__.py  result_summarizer.py  schema_provider.py  sql_executor.py  text_to_sql.py  (+2 more)
boons_text_to_sql_agent/domain/: __init__.py  models.py
config/: guardrails.yaml  prompts.yaml
db/: docker-compose.yml
db/init/: 00-init.sql  01-order-schemas.sql  01-schema.sql  02-seed.sql  dummy-schema.sql
docs/: README.md  architecture.md  architecture_components.md  aws_deployment_analysis.md  aws_migration_guide_final.md  aws_rds_simulation_guide.md  db_engineer_guidelines.md  next-steps.md  security_analysis_report.md  security_and_prompts_overview.md
docs/aws-deploy/: config.dev.json  config.prod.json  config.qa.json  infra_team_handover.md  infrastructure_questionnaire.md
scripts/: build_knowledge_base.py  generate_seed_data.py  generate_today_data.py  ingest_schema.py  query.sh  reproduce_briefing.py  reproduce_case5.py  reproduce_formatting.py  reproduce_list_formatting.py  test_agent_schema.py  test_db_queries.py  test_suite.py
tests/: test_agent_schema.py  test_db_queries.py  test_ingest_schema.py  test_query.py  test_regex.py  test_sanitization.py  test_security.py  test_services.py  test_suite.py  test_watcher_agent.py
(+9 files in other folders)
