[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boons-text-to-sql-agent"
version = "0.1.0"
description = "Clean-architecture Text-to-SQL analytics agent (local-first, AWS-ready POC)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Boons Text-to-SQL Agent" },
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "langchain>=0.3.0",
  "openai>=1.0.0",
  "aiomysql>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pytest>=8.0.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_unused_ignores = true
warn_return_any = true

